crates/rargs/tests/snapshots/test_scripts__impl-64.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] commands-default.sh upload --help"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Upload a file

[4mAlias:[0m u

[4mUsage:[0m
  upload [OPTIONS] SOURCE
  upload -h|--help

[4mArguments:[0m
  SOURCE
    URL to download from
    [@required]

[4mOptions:[0m
  -f --force
    Force upload
  -h --help
    Print help

