crates/rargs/tests/snapshots/test_scripts__impl-73.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] commands-default-force.sh --help"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Sample application that uses the default command option

[4mUsage:[0m
  commands-default-force [OPTIONS] [COMMAND] [COMMAND_OPTIONS]
  commands-default-force -h|--help
  commands-default-force -v|--version

[4mExamples:[0m
  commands-default-force 
    Run the default command
  commands-default-force --help
    Print the global help
  commands-default-force download something
    Download something
  commands-default-force upload something
    Upload something
  commands-default-force something
    Upload something using the default command

[4mCommands:[0m
  download .... Download a file
  upload ...... Upload a file
  [@default upload]

[4mOptions:[0m
  -h --help
    Print help
  -v --version
    Print version

